--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load format_thousands %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,24 +45,14 @@
 			<div class="recommended p100">
 				<div class="title">Рекомендуем</div>
 				<div class="recommended__elems ficb">
-					<div class="recommended__block recommended__block_first">
+					{% for bouquet in bouquets %}
+					<div class="recommended__block" style="background: url({{ bouquet.photo.url }}) no-repeat center bottom / cover;">
 						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Летнее утро</span>
-							<span class="recommended__block_price">3 600 руб</span>
+							<span class="recommended__block_intro">{{ bouquet.name }}</span>
+							<span class="recommended__block_price">{{ bouquet.price|floatformat:'0'|format_thousands }} руб</span>
 						</div>
 					</div>
-					<div class="recommended__block recommended__block_sec">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Зимняя сказка</span>
-							<span class="recommended__block_price">4 100 руб</span>
-						</div>
-					</div>
-					<div class="recommended__block recommended__block_thr">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Нежный</span>
-							<span class="recommended__block_price">2 900 руб</span>
-						</div>
-					</div>
+					{% endfor %}
 				</div>
 				<button class="btn recommended__btn">Показать всю коллекцию</button>
 			</div>
@@ -73,23 +64,17 @@
 				<div class="title">Как нас найти</div>
 				<div class="contacts__elems ficb">
 					<div class="contacts__block">
+						{% for flower_shop in flower_shops %}
 						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">ул. Пушкинская, 69</div>
-							<a href="tel:89111744460" class="contacts__block_tel">8 (911) 17 44 460</a>
+							<div class="contacts__block_intro">{{ flower_shop.address }}</div>
+							<a href="tel:{{ flower_shop.phone }}" class="contacts__block_tel">{{ flower_shop.phone.as_national }}</a>
 						</div>
-						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">ул. Жукова, 13</div>
-							<a href="tel:89112855571" class="contacts__block_tel">8 (911) 28 55 571</a>
-						</div>
-						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">ул. Красная, 384</div>
-							<a href="tel:89113966682" class="contacts__block_tel">8 (911) 39 66 682</a>
-						</div>
+						{% endfor %}
 					</div>
 					<img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
 					<div class="contacts__map">
-						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
-					</div>					
+						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A91ac97307ed4da51b60dec5a82d971fc454cc9c30bc89b885820d3ddcf9c86a8&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
+					</div>
 				</div>
 				<button class="btn contacts__btn">Заказать доставку</button>
 			</div>
