--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -749,3 +749,26 @@ color: #2D2D2D;
 
 opacity: 0.3;
 }
+
+
+/* Алерт */
+.success-alert {
+  padding: 20px;
+  background-color: #04AA6D;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
