--- a/templates/card.html
+++ b/templates/card.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load format_thousands %}
 {% block first-section %}
 	<section id="card">
 		<div class="container">
