--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load format_thousands %}
 {% block first-section %}
 	<section id="catalog">
 		<div class="container p100">
