--- a/templates/base.html
+++ b/templates/base.html
@@ -24,72 +24,71 @@
             </nav>
           </div>
         </div>
-        {% block banner %}{% endblock banner %}
       </header>
+      <div class="success-alert" style="display: {{ success_alert_style }}">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        <strong>Успешно!</strong> Менеджер перезвонит вам в течение часа для консультации
+      </div>
+      {% block banner %}{% endblock banner %}
     {% block div-end %}{% endblock div-end %}
-
     {% block first-section %}{% endblock first-section %}
-
     {% block contacts %}
-      <section id="contacts">
-        <div class="container">
-          <div class="contacts">
-            <div class="title">Как нас найти</div>
-            <div class="contacts__elems ficb">
-              <div class="contacts__block">
-                {% for flower_shop in flower_shops %}
-                <div class="contacts__block_item ficc">
-                  <div class="contacts__block_intro">{{ flower_shop.address }}</div>
-                  <a href="tel:{{ flower_shop.phone }}" class="contacts__block_tel">{{ flower_shop.phone.as_national }}</a>
-                </div>
-                {% endfor %}
+    <section id="contacts">
+      <div class="container">
+        <div class="contacts">
+          <div class="title">Как нас найти</div>
+          <div class="contacts__elems ficb">
+            <div class="contacts__block">
+              {% for flower_shop in flower_shops %}
+              <div class="contacts__block_item ficc">
+                <div class="contacts__block_intro">{{ flower_shop.address }}</div>
+                <a href="tel:{{ flower_shop.phone }}" class="contacts__block_tel">{{ flower_shop.phone.as_national }}</a>
               </div>
-              <img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
-              <div class="contacts__map">
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
-              </div>          
+              {% endfor %}
             </div>
-            <button class="btn contacts__btn">Заказать доставку</button>
+            <img src="{% static 'img/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
+            <div class="contacts__map">
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
+            </div>          
           </div>
+          <button class="btn contacts__btn">Заказать доставку</button>
         </div>
-      </section>
+      </div>
+    </section>
     {% endblock contacts %}
-
     {% block consultation %}
-      <section id="consultation">
-        <div class="container">
-          <div class="consultation">
-            <div class="title consultation__title">Оставьте заявку на консультацию</div>
-            <form action="/" class="consultation__form" method="post">
-              {% csrf_token %}
-              {{ form }}
-              <button type="submit" class="consultation__form_btn">Отправить</button>
-            </form>
-          </div>
+    <section id="consultation">
+      <div class="container">
+        <div class="consultation">
+          <div class="title consultation__title">Оставьте заявку на консультацию</div>
+          <form action="/" class="consultation__form" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit" class="consultation__form_btn">Отправить</button>
+          </form>
         </div>
-      </section>
+      </div>
+    </section>
     {% endblock consultation %}
-
     {% block footer %}
-      <footer id="footer">
-        <div class="container">
-          <div class="footer">
-            <a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
-            <nav>
-              <ul class="menu footer__menu ficc">
-                <li class="menu__item"><a href="{% url 'catalog' %}" class="menu__item_link">Каталог</a></li>
-                <li class="menu__item"><a href="{% url 'quiz' %}" class="menu__item_link">Рекомендации</a></li>
-                <li class="menu__item"><a href="{% url 'index' %}#contacts" class="menu__item_link">Контакты</a></li>
-              </ul>
-            </nav>
-            <hr class="line"></hr>
-            <a href="#" class="footer__poli">Политика конфиденциальности</a>
-            <p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
-          </div>
+    <footer id="footer">
+      <div class="container">
+        <div class="footer">
+          <a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
+          <nav>
+            <ul class="menu footer__menu ficc">
+              <li class="menu__item"><a href="{% url 'catalog' %}" class="menu__item_link">Каталог</a></li>
+              <li class="menu__item"><a href="{% url 'quiz' %}" class="menu__item_link">Рекомендации</a></li>
+              <li class="menu__item"><a href="{% url 'index' %}#contacts" class="menu__item_link">Контакты</a></li>
+            </ul>
+          </nav>
+          <hr class="line"></hr>
+          <a href="#" class="footer__poli">Политика конфиденциальности</a>
+          <p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
         </div>
-      </footer>
+      </div>
+    </footer>
     {% endblock footer %}
     {% block scripts %}{% endblock scripts %}
   </body>
-
 </html>    
