fix pages catalog.html and card.html

--- a/templates/card.html
+++ b/templates/card.html
@@ -32,7 +32,12 @@
 							</span>
 						</div>
 					</div>
-					<button class="btn largeBtn card__btn">Заказать букет</button>
+					<a href="{% url 'order' %}">
+						<button class="btn largeBtn card__btn">Заказать букет</button>
+					</a>
+					<!-- <a href="{{link_order}}" class="btn largeBtn card__btn" style="display: block; text-decoration: none; text-align: center;">
+						Заказать букет
+					</a> -->
 				</div>
 			</div>
 		</div>
