Fix bug with show success alert everywhere

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </header>
-      <div class="success-alert" style="display: {{ success_alert_style }}">
+      <div class="success-alert" style="display: {{ success_alert_style|default:'none' }}">
         <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
         <strong>Успешно!</strong> Менеджер перезвонит вам в течение часа для консультации
       </div>
