--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,35 +1,81 @@
 {% extends "base.html" %}
 {% load static %}
 {% block first-section %}
-	<section id="quiz">
-		<div class="container">
-			<div class="quiz">
-				<div class="quiz__back ">
-					<a href="#" class="quiz__back_link fic"><img src="{% static 'img/arrow-left.svg' %}" alt="arrow-left" class="arrowLeft">
-					<span class="quiz__back_intro">Назад</span></a>
-				</div>
-				<div class="quiz__block">
-					<h1 class="quiz__title">К какому событию нужен букет?</h1>
-					<div class="quiz__elems fic">
-						<button class="quiz__elem">Свадьба</button>
-						<button class="quiz__elem">День рождения</button>
-						<button class="quiz__elem">Без повода</button>
-					</div>
-					<div class="quiz__progress">
-						<div class="quiz__progress_step">
-							<span class="quiz__progress_num">1</span>
-							<span class="quiz__progress_in"> шаг из </span>
-							<span class="quiz__progress_num">2</span>
-						</div>
-						<div class="quiz__progress_line">
-							<div class="quiz__progress_lineActive"></div>
-						</div>
-					</div>
-				</div>
-				
-			</div>
-		</div>
-	</section>
+<section id="quiz">
+  <div class="container">
+    <div class="quiz">
+      <div class="quiz__back ">
+        <a href="{% url 'quiz' %}" class="quiz__back_link fic"><img src="{% static 'img/arrow-left.svg' %}" alt="arrow-left"
+                                                     class="arrowLeft">
+          <span class="quiz__back_intro">Назад</span></a>
+      </div>
+      {% if step == 1 %}
+      <div class="quiz__block">
+        <h1 class="quiz__title">К какому событию нужен букет?</h1>
+        <div class="quiz__elems fic">
+          {% for event in events %}
+          <form action="{% url 'quiz' %}">
+            <button class="quiz__elem" name="event" value="{{ event.id }}">{{ event.name }}</button>
+            <input type="hidden"/>
+          </form>
+          {% endfor %}
+        </div>
+        <div class="quiz__progress">
+          <div class="quiz__progress_step">
+            <span class="quiz__progress_num">1</span>
+            <span class="quiz__progress_in"> шаг из </span>
+            <span class="quiz__progress_num">2</span>
+          </div>
+          <div class="quiz__progress_line">
+            <div class="quiz__progress_lineActive"></div>
+          </div>
+        </div>
+      </div>
+      {% else %}
+      <div class="quiz__block">
+        <h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
+        <div class="quiz__elems fic">
+          <form action="{% url 'result' %}">
+            <button class="quiz__elem" type="submit">До 1 000 руб</button>
+            <input type="hidden" name="price_from" value="0"/>
+            <input type="hidden" name="price_to" value="1000"/>
+            <input type="hidden" name="event" value="{{ event }}"/>
+          </form>
+          <form action="{% url 'result' %}">
+            <button class="quiz__elem">1 000 - 5 000 руб</button>
+            <input type="hidden" name="price_from" value="1000"/>
+            <input type="hidden" name="price_to" value="5000"/>
+            <input type="hidden" name="event" value="{{ event }}"/>
+          </form>
+          <form action="{% url 'result' %}">
+            <button class="quiz__elem">от 5 000 руб</button>
+            <input type="hidden" name="price_from" value="5000"/>
+            <input type="hidden" name="price_to" value="1000000"/>
+            <input type="hidden" name="event" value="{{ event }}"/>
+          </form>
+          <form action="{% url 'result' %}">
+            <button class="quiz__elem">Не имеет значения</button>
+            <input type="hidden" name="price_from" value="0"/>
+            <input type="hidden" name="price_to" value="1000000"/>
+            <input type="hidden" name="event" value="{{ event }}"/>
+          </form>
+        </div>
+        <div class="quiz__progress">
+          <div class="quiz__progress_step">
+            <span class="quiz__progress_num">2</span>
+            <span class="quiz__progress_in"> шаг из </span>
+            <span class="quiz__progress_num">2</span>
+          </div>
+          <div class="quiz__progress_line">
+            <div class="quiz__progress_lineActive2"></div>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+
+    </div>
+  </div>
+</section>
 {% endblock first-section %}
 {% block contacts %}{% endblock contacts %}
 {% block consultation %}{% endblock consultation %}
