--- a/templates/index.html
+++ b/templates/index.html
@@ -4,20 +4,23 @@
 {% block div-start %}
 <div class="mainBg">{% endblock div-start %}
   {% block banner %}
-      <section id="banner">
-        <div class="container">
-          <div class="banner">
-            <div class="banner__block">
-              <h1 class="banner__title">Мастерская цветов</h1>
-              <p class="banner__text">Подберем для вас букет за два шага, который идеально подойдет под вашу ситуацию</p>
-              <button class="btn banner__btn">Подобрать букет</button>
-            </div>
-            <img src="{% static 'img/bannerImg.png' %}" alt="banner Img" class="banner__img">
-          </div>
+  <section id="banner">
+    <div class="container">
+      <div class="banner">
+        <div class="banner__block">
+          <h1 class="banner__title">Мастерская цветов</h1>
+          <p class="banner__text">Подберем для вас букет за два шага, который идеально подойдет под вашу ситуацию</p>
+          <form action="{% url 'quiz' %}">
+            <button class="btn banner__btn">Подобрать букет</button>
+          </form>
         </div>
-      </section>
+        <img src="{% static 'img/bannerImg.png' %}" alt="banner Img" class="banner__img">
+      </div>
+    </div>
+  </section>
   {% endblock banner %}
-{% block div-end %}</div>{% endblock div-end %}
+  {% block div-end %}
+</div>{% endblock div-end %}
 
 {% block first-section %}
 <section id="recommended">
@@ -37,7 +40,9 @@
         </a>
         {% endfor %}
       </div>
-      <button class="btn recommended__btn">Показать всю коллекцию</button>
+      <form action="{% url 'catalog' %}">
+        <button class="btn recommended__btn">Показать всю коллекцию</button>
+      </form>
     </div>
   </div>
 </section>
