--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -264,7 +264,7 @@ color: #FFFFFF;
 	border-radius: 5px;
 	font-size: 16px;
 	line-height: 103.52%;
-	color: rgba(0, 0, 0, .3);
+	color: rgba(0, 0, 0);
 	margin-right: 10px;
 }
 .consultation__form_btn {
