Make custom reason for recommendation
Custom reason also require name and phone for consultation
There is no recommended bouquet with custom reason, only consultation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -427,6 +427,9 @@ margin-bottom: 30px;
 	line-height: 103.52%;
 	color: #2D2D2D;
 }
+.quiz__elems_sec {
+    margin-top: 10px;
+}
 .quiz__elem {
 	font-weight: 500;
 	font-size: 16px;
@@ -490,6 +493,23 @@ margin-bottom: 30px;
 	border-radius: 10px;
 	width: 50%;
 	height: 8px;
+}
+
+.quiz__form_input {
+	width: 240px;
+	height: 57px;
+
+	background: #F4F4F4;
+	border-radius: 5px;
+	padding-left: 30px;
+	padding-right: 15px;
+	border: none;
+	font-size: 16px;
+line-height: 103.52%;
+/* identical to box height, or 17px */
+/*	margin-right: 10px;*/
+	outline: none;
+color: rgba(0, 0, 0);
 }
 
 /*result.html*/
