--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 {% block consultation %}
 <div class="success-alert" style="display: {{ success_alert_style|default:'none' }}">
   <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-  <strong>Успешно!</strong> Менеджер перезвонит вам в течение часа для консультации
+  <strong>Успешно!</strong> Менеджер перезвонит вам в течение 20 минут для консультации
 </div>
 <section id="consultation">
   <div class="container">
