--- a/templates/consultation.html
+++ b/templates/consultation.html
@@ -1,24 +1,35 @@
 {% extends "base.html" %}
 {% load static %}
 {% block first-section %}
-	<section id="singUpConsultation">
-		<div class="container">
-			<div class="singUpConsultation">
-				<form action="#" class="singUpConsultation__form">
-					<div class="title">Запись на консультацию</div>		
-					<input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
-					<input type="text" name="tel" class="order__form_input" placeholder="+ 7 (999) 000 00 00" required>
-					<div class="chekbox fic">
-						<input type="checkbox" class="singUpConsultation__ckekbox" checked required>
-						<span class="chekbox__intro">Я согласен(а) с политикой конфидециоальности</span>
-					</div>
-					<button class="btn singUpConsultation__form_btn">Отправить</button>	
-				</form>
-				<div class="blockImgHiden"></div>
-			</div>
-		</div>
-		<img src="{% static 'img/singUpConsultationImg.jpg' %}" alt="singUpConsultationImg" class="singUpConsultation__img">
-	</section>
+<section id="singUpConsultation">
+  <div class="container">
+    <div class="singUpConsultation">
+      <form action="#consultation" class="singUpConsultation__form" method="post">
+        <div class="title">Запись на консультацию</div>
+        {% csrf_token %}
+        {% if form.errors %}
+        <ul>
+          {% for field in form %}
+          {% for error in field.errors %}
+          <li style="color: #000000"><strong>{{ error|escape }}</strong></li>
+          {% endfor %}
+          {% endfor %}
+        </ul>
+        {% endif %}
+        {% for field in form %}
+        {{ field }}
+        {% endfor %}
+        <div class="chekbox fic">
+          <input type="checkbox" class="singUpConsultation__ckekbox" checked required disabled>
+          <span class="chekbox__intro">Я согласен(а) с <a href="{% static 'privacy_example.pdf' %}">политикой конфиденциальности</a></span>
+        </div>
+        <button type="submit" class="btn singUpConsultation__form_btn">Отправить</button>
+      </form>
+      <div class="blockImgHiden"></div>
+    </div>
+  </div>
+  <img src="{% static 'img/singUpConsultationImg.jpg' %}" alt="singUpConsultationImg" class="singUpConsultation__img">
+</section>
 {% endblock first-section %}
 {% block contacts %}{% endblock contacts %}
 {% block consultation %}{% endblock consultation %}
