--- a/templates/card.html
+++ b/templates/card.html
@@ -32,7 +32,7 @@
 							</span>
 						</div>
 					</div>
-					<a href="{% url 'order' %}">
+					<a href="{% url 'order' bouquet.id %}">
 						<button class="btn largeBtn card__btn">Заказать букет</button>
 					</a>
 					<!-- <a href="{{link_order}}" class="btn largeBtn card__btn" style="display: block; text-decoration: none; text-align: center;">
