--- a/templates/order.html
+++ b/templates/order.html
@@ -7,7 +7,7 @@
 				<div class="order__block">
 					<div class="order_items">
 						<div class="title">Оформление доставки</div>
-						<form action="#" class="order__form">
+						<form action="#" method="post" class="order__form">
 							<div class="order__form_block ficb">
 								<input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
 								<input type="text" name="tel" class="order__form_input" placeholder="+ 7 (999) 000 00 00" required>
@@ -47,12 +47,12 @@
 							</div>
 						</form>
 					</div>
-					
 				</div>
 			</div>
 		</div>
 		<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
 	</section>
+	<a href="{{link_order}}" target="_blank">Оплатить</a>
 {% endblock first-section %}
 {% block contacts %}{% endblock contacts %}
 {% block consultation %}{% endblock consultation %}
