--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
       <a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo"></a>
       <nav>
         <ul class="menu ficc">
+          {% if not request.user.is_anonymous %}
+          <li class="menu__item"><a href="{% url 'stats' %}" class="menu__item_link">Дашборд</a></li>
+          {% endif %}
           <li class="menu__item"><a href="{% url 'catalog' %}" class="menu__item_link">Каталог</a></li>
           <li class="menu__item"><a href="{% url 'quiz' %}" class="menu__item_link">Рекомендации</a></li>
           <li class="menu__item"><a href="{% url 'index' %}#contacts" class="menu__item_link">Контакты</a></li>
@@ -94,6 +97,9 @@
       <a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
       <nav>
         <ul class="menu footer__menu ficc">
+          {% if not request.user.is_anonymous %}
+          <li class="menu__item"><a href="{% url 'stats' %}" class="menu__item_link">Дашборд</a></li>
+          {% endif %}
           <li class="menu__item"><a href="{% url 'catalog' %}" class="menu__item_link">Каталог</a></li>
           <li class="menu__item"><a href="{% url 'quiz' %}" class="menu__item_link">Рекомендации</a></li>
           <li class="menu__item"><a href="{% url 'index' %}#contacts" class="menu__item_link">Контакты</a></li>
