--- a/templates/result.html
+++ b/templates/result.html
@@ -33,7 +33,7 @@
           <div class="result__items_price">{{ bouquet.price|floatformat:'0'|format_thousands }} руб</div>
           <button class="btn result__items_btn">Заказать букет</button>
           <hr class="result__items_line"/>
-          <div class="result__items_intro">Хотите что-то более специальное?</div>
+          <div class="result__items_intro">Нужно что-то более особенное?</div>
           <div class="result__items_block">
             <form action="{% url 'catalog' %}">
               <button class="btn largeBtn result__items_block__btn">Смотреть всю коллекцию</button>
