--- a/templates/result.html
+++ b/templates/result.html
@@ -31,7 +31,9 @@
         <div class="result__items">
           <div class="title result__items_title">{{ bouquet.name }}</div>
           <div class="result__items_price">{{ bouquet.price|floatformat:'0'|format_thousands }} руб</div>
-          <button class="btn result__items_btn">Заказать букет</button>
+          <form action="{% url 'order' bouquet.id %}">
+						<button class="btn result__items_btn">Заказать букет</button>
+					</form>
           <hr class="result__items_line"/>
           <div class="result__items_intro">Нужно что-то более особенное?</div>
           <div class="result__items_block">
