Make success alert modal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -795,6 +795,7 @@ color: rgba(0, 0, 0);
 }
 
 /* Алерт */
+/*
 .success-alert {
   padding: 20px;
   background-color: #04AA6D;
@@ -814,6 +815,53 @@ color: rgba(0, 0, 0);
 
 .closebtn:hover {
   color: black;
+}
+*/
+
+.success-alert {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #04AA6D; /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.success-alert-content {
+  background-color: #04AA6D;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
+}
+
+.success-alert-header {
+  padding: 2px 16px;
+  background-color: #04AA6D;
+  color: white;
+}
+
+.success-alert-body {
+  padding: 2px 16px;
+  color: white;
+}
+
+.closebtn {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.closebtn:hover,
+.closebtn:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* Login.html */
