--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,6 @@ img {
 a, button {
 	cursor: pointer;
 	transition: all .2s ease;
-
 }
 input::placeholder {
 	color: rgba(0, 0, 0, .3);
@@ -106,21 +105,20 @@ input::placeholder {
 }
 .menu__item_link {
 	font-weight: 600;
-font-size: 10px;
-line-height: 145.02%;
-/* identical to box height, or 15px */
+    font-size: 10px;
+    line-height: 145.02%;
+    /* identical to box height, or 15px */
 
-text-transform: uppercase;
+    text-transform: uppercase;
 
-/* основной */
-text-decoration: none;
-color: #17CF97;
+    /* основной */
+    text-decoration: none;
+    color: #17CF97;
 }
 .banner {
 	padding-top: 174px;
 	padding-bottom: 183px;
 }
-
 .banner__title {
 	font-family: 'Unbounded', sans-serif;
 	max-width: 1607px;
@@ -129,32 +127,27 @@ color: #17CF97;
 	line-height: 80.52%;
 	/* or 97px */
 
-
 	/* основной */
-
 	color: #17CF97;
 	margin-bottom: 50px;
 }
 .banner__text {
 	max-width: 423px;
 	font-size: 16px;
-line-height: 103.52%;
-/* or 17px */
+    line-height: 103.52%;
+    /* or 17px */
 
-
-/* серый */
-
-color: #ABABAB;
-margin-bottom: 50px;
+    /* серый */
+    color: #ABABAB;
+    margin-bottom: 50px;
 }
 .banner__img {
-/*	width: 794px;
-height: 825px;*/
-left: 47%;
-/*top: -38px;*/
-bottom: 0;
+    /*	width: 794px;
+    height: 825px;*/
+    left: 47%;
+    /*top: -38px;*/
+    bottom: 0;
 	position: absolute;
-
 }
 .banner__btn {
 	width: 188px;
@@ -188,7 +181,6 @@ bottom: 0;
 	height: 57px;
 	margin-top: 30px;
 }
-
 .contacts {
 	padding-bottom: 100px;
 }
@@ -217,25 +209,22 @@ bottom: 0;
 .contacts__block_intro {
 	margin-bottom: 10px;
 	font-size: 14px;
-line-height: 145.02%;
-/* or 20px */
+    line-height: 145.02%;
+    /* or 20px */
 
-
-/* серый */
-
-color: #ABABAB;
+    /* серый */
+    color: #ABABAB;
 }
 .contacts__block_tel {
 	font-size: 16px;
-line-height: 103.52%;
-/* identical to box height, or 17px */
+    line-height: 103.52%;
+    /* identical to box height, or 17px */
 
-text-decoration: none;
-/* черный */
+    text-decoration: none;
 
-color: #2D2D2D;
+    /* черный */
+    color: #2D2D2D;
 }
-
 #consultation {
 	padding-top: 37px;
 	padding-bottom: 49px;
@@ -243,10 +232,10 @@ color: #2D2D2D;
 }
 .consultation__title {
 	line-height: 103.52%;
-/* or 37px */
-margin-bottom: 19px;
+    /* or 37px */
+    margin-bottom: 19px;
 	text-align: center;
-color: #FFFFFF;
+    color: #FFFFFF;
 }
 .consultation__form {
 	width: 655px;
@@ -255,7 +244,6 @@ color: #FFFFFF;
 .consultation__form_input {
 	padding-left: 30px;
 	padding-right: 7px;
-
 	width: 240px;
 	height: 57px;
 	border: none;
@@ -273,7 +261,6 @@ color: #FFFFFF;
 	line-height: 103.52%;
 	/* identical to box height, or 17px */
 
-
 	color: #FFFFFF;
 	width: 141px;
 	height: 57px;
@@ -282,7 +269,6 @@ color: #FFFFFF;
 	border-radius: 40px;
 	cursor: pointer;
 }
-
 #footer {
 	background: #F5F5F5;
 }
@@ -299,30 +285,26 @@ color: #FFFFFF;
 	height: 2px;
 	border: none;
 	background: #17CF97;
-/*	border: 1px solid #17CF97;*/
+   /*	border: 1px solid #17CF97;*/
 }
 .footer__poli {
 	font-size: 12px;
-line-height: 145.02%;
-/* or 17px */
+    line-height: 145.02%;
+    /* or 17px */
 
-text-decoration-line: underline;
-
-color: #000000;
-opacity: 0.3;
+    text-decoration-line: underline;
+    color: #000000;
+    opacity: 0.3;
 }
-
 .footer_cop {
 	font-size: 12px;
-line-height: 145.02%;
-/* or 17px */
+    line-height: 145.02%;
+    /* or 17px */
 
-margin-top: 10px;
-color: #000000;
-
-opacity: 0.3;
+    margin-top: 10px;
+    color: #000000;
+    opacity: 0.3;
 }
-
 
 /*catalog.html*/
 /*.catalog__block .recommended__elems {
@@ -344,7 +326,6 @@ opacity: 0.3;
 	background: url('../img/catalog/catalogBg4.jpg') no-repeat center bottom / cover;
 }
 
-
 /*card.html*/
 .card {
 	padding-top: 50px;
@@ -362,15 +343,13 @@ opacity: 0.3;
 }
 .card__block_price {
 	font-weight: 300;
-font-size: 36px;
-line-height: 103.52%;
-/* or 37px */
+    font-size: 36px;
+    line-height: 103.52%;
+    /* or 37px */
 
-
-/* черный */
-
-color: #2D2D2D;
-margin-bottom: 30px;
+    /* черный */
+    color: #2D2D2D;
+    margin-bottom: 30px;
 }
 .card__elems {
 	display: flex;
@@ -401,7 +380,6 @@ margin-bottom: 30px;
 }
 
 /*quiz.html*/
-
 .arrowLeft {
 	margin-right: 4px;
 }
@@ -411,7 +389,6 @@ margin-bottom: 30px;
 .quiz__back_intro {
 	font-size: 14px;
 	line-height: 145.02%;
-
 	color: #ABABAB;
 }
 .quiz__back {
@@ -446,22 +423,17 @@ margin-bottom: 30px;
 }
 .quiz__elem:hover {
  	background: #D9FAF1;
-
- }
+}
 .quiz__elem.active {
 	background: #17CF97;
-
 }
-
 .quiz__progress_num, .quiz__progress_in {
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 145.02%;
 	/* or 20px */
 
-
 	color: rgba(0, 0, 0, .3);
-
 }
 .quiz__progress {
 	margin-top: 70px;
@@ -496,13 +468,11 @@ margin-bottom: 30px;
 }
 .card__items_text {
 	font-size: 14px;
-line-height: 145.02%;
-/* or 20px */
+    line-height: 145.02%;
+    /* or 20px */
 
-
-/* серый */
-
-color: #ABABAB;
+    /* серый */
+    color: #ABABAB;
 }
 .card__items_text__first {
 	margin-bottom: 7px;
@@ -527,14 +497,13 @@ color: #ABABAB;
 	line-height: 103.52%;
 	/* identical to box height, or 25px */
 
-
 	/* черный */
 	margin-bottom: 30px;
 	color: #2D2D2D;
 }
 .result__items_btn {
 	width: 340px;
-height: 57px;
+    height: 57px;
 }
 .result__items_line {
 	width: 333px;
@@ -549,7 +518,6 @@ height: 57px;
 	font-size: 14px;
 	line-height: 145.02%;
 	/* or 20px */
-
 
 	/* серый */
 	margin-bottom: 17px;
@@ -583,18 +551,17 @@ height: 57px;
 .order__form_input {
 	width: 240px;
 	height: 57px;
-
 	background: #F4F4F4;
 	border-radius: 5px;
 	padding-left: 30px;
 	padding-right: 15px;
 	border: none;
 	font-size: 16px;
-line-height: 103.52%;
-/* identical to box height, or 17px */
-/*	margin-right: 10px;*/
+    line-height: 103.52%;
+    /* identical to box height, or 17px */
+    /*	margin-right: 10px;*/
 	outline: none;
-color: rgba(0, 0, 0, .3);
+    color: rgba(0, 0, 0, .3);
 }
 /*.order__form_input:last-child {
 	margin-right: 0;
@@ -625,9 +592,8 @@ input[type=radio]:checked + label {
 .order__form_radio {
 	display: none;
 }
-
 .order__form_line {
-/*	border: 1px solid #2D2D2D;*/
+    /*	border: 1px solid #2D2D2D;*/
 	background: #2D2D2D;
 	height: 2px;
 	border: none;
@@ -655,7 +621,6 @@ input[type=radio]:checked + label {
     top: 0;
     height: 775px;
 }
-
 #orderStep {
 	position: relative;
 }
@@ -665,16 +630,13 @@ input[type=radio]:checked + label {
 }
 .order__form_intro {
 	font-size: 14px;
-line-height: 145.02%;
-/* or 20px */
+    line-height: 145.02%;
+    /* or 20px */
 
-
-/* черный */
-
-color: #323232;
-margin-bottom: 5px;
+    /* черный */
+    color: #323232;
+    margin-bottom: 5px;
 }
-
 .orderStep_form .order__form_block {
 	display: flex;
 	justify-content: space-between;
@@ -687,7 +649,6 @@ margin-bottom: 5px;
 .order__form_item .orderStep_form_input {
 	width: 88px;
 	margin-right: 10px;
-	
 }
 .orderStep_form input[name="cardFname"] {
 	width: 220px;
@@ -696,9 +657,7 @@ margin-bottom: 5px;
 .orderStep_form input[name="cardCvc"] {
 	width: 91px;
 }
-
 .orderStep .order_items {
-	
 }
 
 /*consultation.html*/
@@ -725,7 +684,6 @@ margin-bottom: 5px;
 	top: 0;
 	height: 775px;
 }
-
 .chekbox {
 	margin-top: 15px;
 	margin-bottom: 30px;
@@ -739,84 +697,15 @@ margin-bottom: 5px;
 }
 .chekbox__intro {
 	font-size: 10px;
-line-height: 145.02%;
-/* identical to box height, or 15px */
+    line-height: 145.02%;
+    /* identical to box height, or 15px */
 
-
-/* черный */
-
-color: #2D2D2D;
-
-opacity: 0.3;
+    /* черный */
+    color: #2D2D2D;
+    opacity: 0.3;
 }
 
-
-/* Алерт */
-.success-alert {
-  padding: 20px;
-  background-color: #04AA6D;
-  color: white;
-}
-
-.closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.closebtn:hover {
-  color: black;
-}
-
-/* Login.html */
-#login {
-	padding-top: 37px;
-	padding-bottom: 49px;
-	background: #17CF97;
-}
-.login__title {
-	line-height: 103.52%;
-/* or 37px */
-margin-bottom: 19px;
-	text-align: center;
-color: #FFFFFF;
-}
-.login__form {
-	width: 655px;
-	margin: 0 auto;
-}
-.login__form_input {
-	padding-left: 30px;
-	padding-right: 7px;
-
-	width: 240px;
-	height: 57px;
-	border: none;
-	outline: none;
-	background: #FFFFFF;
-	border-radius: 5px;
-	font-size: 16px;
-	line-height: 103.52%;
-	color: rgba(0, 0, 0, .3);
-	margin-right: 10px;
-}
-.login__form_btn {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 103.52%;
-	/* identical to box height, or 17px */
-
-
-	color: #FFFFFF;
-	width: 141px;
-	height: 57px;
-	background: transparent;
-	border: 1px solid #FFFFFF;
-	border-radius: 40px;
-	cursor: pointer;
+/*availability.html*/
+.default-btn {
+	padding: 10px;
 }
