Link flowerapp and floristapp through links

--- a/floristapp/templates/florist-base.html
+++ b/floristapp/templates/florist-base.html
@@ -15,7 +15,7 @@
       <header id="header">
         <div class="container">
           <div class="header ficb">
-            <a href="{% url 'floristapp:availability' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo"></a>
+            <a href="{% url 'index' %}"><img src="{% static 'img/logo.svg' %}" alt="logo" class="logo"></a>
             <nav>
               <ul class="menu ficc">
                 <li class="menu__item"><a href="{% url 'floristapp:availability' %}" class="menu__item_link">Наличие</a></li>
